projects/cluster/roles/cluster_deploy_minio_s3_server/files/deploy_minio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio-deployment
  labels:
    app: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      volumes:
      - name: data-dir
        emptyDir: {}
      - name: artifacts-dir
        emptyDir: {}
      - name: empty-bin-dir
        emptyDir: {}
      - name: cabundle
        configMap:
          # Automatically created in every ocp namespace
          name: openshift-service-ca.crt
          items:
          - key: service-ca.crt
            path: public.crt
          defaultMode: 420
      - name: minio-certs
        secret:
          secretName: minio-certs
          items:
          - key: tls.crt
            path: public.crt
          - key: tls.key
            path: private.key
          defaultMode: 420
      containers:
      - name: minio
        image: quay.io/minio/minio:RELEASE.2022-05-08T23-50-31Z
        args:
        - server
        - /data
        - '--certs-dir'
        - /mnt/minio-certs
        - --console-address=:9001
        - --anonymous
        ports:
        - containerPort: 9000
        - containerPort: 9001
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - name: data-dir
          mountPath: /data
        - name: minio-certs
          mountPath: /mnt/minio-certs
        - name: cabundle
          mountPath: /mnt/minio-certs/CAs
      - name: ubi8 # this container is used to export data out of the container, with tar/oc cp
        image: quay.io/centos/centos:stream9
        command: [bash, -c]
        args:
        - |
             set -o errexit
             set -o pipefail
             set -o nounset
             set -o errtrace
             set -x
             cd /usr/local/bin
             curl -Ssf "$RSYNC_RPM_URL" | rpm2archive | tar xz ./usr/bin/rsync --strip-components=3
             sleep inf
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - name: artifacts-dir
          mountPath: /artifacts
        - name: empty-bin-dir
          mountPath: /usr/local/bin
      - name: mc
        image: quay.io/minio/mc:RELEASE.2022-05-09T04-08-26Z
        command: [bash, -cxe]
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - name: artifacts-dir
          mountPath: /artifacts
        args:
        - |
          [...]
---
kind: Service
apiVersion: v1
metadata:
  name: minio
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: minio-certs
spec:
  ports:
  - name: https
    protocol: TCP
    port: 9000
    targetPort: 9000
  - name: console
    protocol: TCP
    port: 9001
    targetPort: 9001
  selector:
    app: minio

---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: minio-secure
spec:
  to:
    kind: Service
    name: minio
    weight: 100
  port:
    targetPort: https
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: Redirect
